# AssistantAudit-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  secret-scan.yml
src/assistant_audit_agent/: __init__.py  config.py  enrollment.py  heartbeat.py  logging_config.py  main.py  task_runner.py  uploader.py  websocket_client.py
src/assistant_audit_agent/tools/: __init__.py  ad_collector_tool.py  nmap_tool.py  oradad_tool.py  ssh_collector_tool.py  winrm_collector_tool.py
tests/: test_ad_collector_tool.py  test_config.py  test_enrollment.py  test_heartbeat.py  test_main.py  test_nmap_streaming.py  test_nmap_tool.py  test_oradad_tool.py  test_ssh_collector_tool.py  test_task_runner.py  test_uploader.py  test_websocket_client.py  test_winrm_collector_tool.py
