[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-audit-agent"
version = "0.1.0"
description = "Agent léger pour audits de sécurité IT — se connecte au serveur AssistantAudit via mTLS + WebSocket."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "paramiko>=3.4",
    "pywinrm>=0.4",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
assistant-audit-agent = "assistant_audit_agent.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
